{{$NEXT}}

1.61   2023-09-02 (TRIAL RELEASE)

- Fix use of the `Perl_isfinite` function on platforms where this is
  broken. On Windows with Perl <= 5.20, it seems like `Perl_isfinite` exists
  but it calls `Perl_isinf` and `Perl_isnan`, which don't exist.


1.60   2023-08-19 (TRIAL RELEASE)

- Switched to using the `Perl_isfinite` function instead of trying to
  implement this ourselves in XS code. This should fix quadmath builds on
  Windows. Reported by @sisyphus. GH #139.


1.59   2022-10-23

- Fixed tests to pass with DateTime::Locale 1.37+. Reported by Slaven
  Rezić. GH #34.


1.58   2022-04-18

- Fixed tests so that they ignore the value set in the
  `PERL_DATETIME_DEFAULT_TZ` env var, if one exists. Reported by Ian Gibbs. GH
  #128.


1.57   2022-03-03

- The last release would die if Sub::Util was not available, but this should
  just be an optional requirement. Fixed by Paul Howarth. GH #131.

- This is the second time I've introduced this bug, so now there's a test to
  make sure that DateTime can be loaded if Sub::Util is not
  installed. Hopefully this will prevent a third occurrence of this bug.


1.56   2022-03-02

- The DateTime->from_epoch constructor now accepts a single, non-hashref
  argument, and validates it as an epoch value. Requested by Neil Bowers. GH
  #119.


1.55   2021-12-23

- Another documentation fix release. This fixes some mistakes, fixes some
  broken links, and removes all references to the long-dead datetime.perl.org
  site.


1.54   2020-12-04

- This release contains a lot of small documentation revisions, both to
  formatting and content.


1.53   2020-11-08

- Added a $dt->rfc3339 method. Based on discussion in GH #109 by worthmine.


1.52   2020-02-29

- Added a $dt->is_between($dt1, $dt2) method. Based on GH #97 by philip r
  brenan.

- Simplify the calculation of leap seconds in XS. This is a little more
  efficient for most use cases (anything with future or recent past