@@ -8,20 +8,13 @@
 /* This file is generated by tools/leap_seconds_header.pl */
 #include "leap_seconds.h"
 
-/* It seems that on Windows before Perl 5.20, the Perl_isfinite macro exists,
-   but it tries to call Perl_isinf and Perl_isnan, which don't exist. */
-#if defined (Perl_isfinite) && defined (Perl_isinf) && defined (Perl_isnan)
-#  define dt_isfinite Perl_isfinite
-#else
-#  include <math.h>
-#  ifdef isfinite
-#    define dt_isfinite isfinite
-#  else
-#    ifdef finite
-#      define dt_isfinite finite
-#    endif
-#  endif
-#endif
+# if defined(WIN32)
+#   if PERL_VERSION_GE(5, 22, 0)
+#     define dt_isfinite Perl_isfinite
+#   endif
+# else
+#   define dt_isfinite Perl_isfinite
+# endif
 
 #define DAYS_PER_400_YEARS  146097
 #define DAYS_PER_4_YEARS    1461
