@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- This is take 3 of trying to use `Perl_isfinite` where it's available. Now we
+  simply don't use it on Windows unless the Perl version is 5.22.0 or later.
+
+
 1.61   2023-09-02 (TRIAL RELEASE)
 
 - Fix use of the `Perl_isfinite` function on platforms where this is
